crates/plotnik-lib/tests/02-parser/recovery_validation/lowercase_branch_label_suggests_capitalized.txt
[first: (a) Second: (b)]
==== diagnostics ====
error: branch labels must be PascalCase
 --> query.ptk:1:2
  |
1 | [first: (a) Second: (b)]
  |  ^^^^^
  |
help: use `First`
  |
1 - [first: (a) Second: (b)]
1 + [First: (a) Second: (b)]
  |
help: branch labels become variants of a tagged union in the output
